# eigenhelm

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
docs/case-studies/: fastapi-template.md
docs/concepts/: how-it-works.md  why-eigenhelm.md
docs/getting-started/: configuration.md
docs/integrations/: agent-skills.md  github-action.md  pre-commit.md
models/: README.md  lang-go.npz  lang-javascript.npz  lang-typescript.npz  pattern-cli.npz
src/eigenhelm/: __init__.py  diff.py  models.py  virtue_extractor.py
src/eigenhelm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eigenhelm/attribution/: __init__.py  constants.py  decompose.py  directives.py  models.py  serialize.py  source_map.py
src/eigenhelm/cli/: __init__.py  benchmark.py  corpus.py  evaluate.py  harness.py  init.py  inspect.py  main.py  mcp.py  model.py  precommit.py  serve.py  skill.py  train.py
src/eigenhelm/config/: __init__.py  defaults.py  loader.py  models.py
src/eigenhelm/corpus/: __init__.py  manifest.py  sync.py
src/eigenhelm/critic/: __init__.py  aesthetic_critic.py  anti_patterns.py  birkhoff.py  compression.py  entropy.py  ncd.py
src/eigenhelm/declarations/: barrel.py  javascript.py  models.py  python.py  rust.py  typescript.py
src/eigenhelm/eigenspace/: __init__.py  projection.py
src/eigenhelm/harness/: __init__.py  report.py  runner.py
src/eigenhelm/helm/: __init__.py  dynamic_helm.py  models.py  pid.py
src/eigenhelm/mcp/: __init__.py  protocol.py  server.py  tools.py
src/eigenhelm/metrics/: __init__.py  cyclomatic.py  halstead.py  wl_hash.py
src/eigenhelm/output/: __init__.py  json_format.py  percentile.py  sarif.py
src/eigenhelm/parsers/: __init__.py  language_map.py  tree_sitter.py
src/eigenhelm/registry/: __init__.py  models.py
src/eigenhelm/scoring/: __init__.py  scorecard.py
src/eigenhelm/serve/: __init__.py  app.py  models.py
src/eigenhelm/trained_models/: __init__.py  baseline.npz  general-polyglot-v1.npz  lang-rust.npz
src/eigenhelm/training/: __init__.py  calibration.py  corpus.py  pca.py  serialization.py
src/eigenhelm/validation/: __init__.py  attribution_audit.py  benchmark.py  categorize.py  discrimination.py  diversity.py  usecase_benchmark.py  usecase_models.py
tests/: conftest.py
tests/contract/: test_016_sarif_output.py  test_attribution_output.py  test_calibration_contracts.py  test_cli_output.py  test_declaration_contract.py  test_directive_vocabulary.py  test_discrimination_contracts.py  test_diversity_contracts.py  test_evaluate_cli_exitcodes.py  test_evaluate_cli_format.py  test_http_response.py  test_iaesthetic_critic.py  test_iagent_integration.py  test_icalibration.py  test_icorpus_manifest.py  test_icorpus_sync.py  test_idynamic_helm_concurrency.py  test_idynamic_helm_construction.py  test_idynamic_helm_eval.py  test_idynamic_helm_stability.py  test_idynamic_helm_steer.py  test_incd.py  test_init_cli.py  test_inspect_metadata.py  test_itraining_pipeline.py  test_ivirtue_extractor.py  test_json_output.py  test_precommit.py  test_region_output_contracts.py  test_scoring_polarity.py  test_train_metadata.py
tests/fixtures/: go_fibonacci.go  go_quicksort.go  java_fibonacci.java  java_quicksort.java  js_fibonacci.js  js_quicksort.js  python_fibonacci.py  rust_fibonacci.rs  rust_quicksort.rs
tests/fixtures/benchmark/: benchmark.json
tests/fixtures/regions/: python_small_production.py
tests/integration/: test_attribution_pipeline.py  test_benchmark.py  test_calibration_integration.py  test_corpus_pipeline.py  test_critic_pipeline.py  test_declaration_scoring.py  test_diff_evaluate.py  test_discrimination.py  test_diversity.py  test_extraction_pipeline.py  test_github_action.py  test_harness_pipeline.py  test_helm_pipeline.py  test_scorecard_pipeline.py  test_serve_pipeline.py  test_training_determinism.py  test_training_pipeline.py  test_usecase_benchmark.py
tests/unit/: test_anti_patterns.py  test_attribution_decompose.py  test_attribution_directives.py  test_attribution_source_map.py  test_birkhoff.py  test_calibration.py  test_cli_evaluate.py  test_compression.py  test_config_loader.py  test_config_models.py  test_corpus_manifest.py  test_cyclomatic.py  test_diff_discovery.py  test_entropy.py  test_exemplar_selection.py  test_exit_codes.py  test_file_categorize.py  test_halstead.py  test_harness.py  test_manifest_authoring.py  test_mcp.py  test_model_metadata.py  test_ncd.py  test_percentile.py  test_pid.py  test_polarity.py  test_projection.py  test_region_spans.py  test_sarif_output.py  test_scorecard.py  test_serve_models.py  test_tier_b.py  test_training_edge_cases.py  test_wl_hash.py
(+305 files in other folders)
